tests/NormalTests/paczka1/fuzzy1/72648709.err
Error in line 1: NGq S969 36,1
Error in line 2: NGq A481 2,3
Error in line 3: NGq S969 63,5
Error in line 6: S969 A48" 39,9
Error in line 4: ddVUe A481 25,5
Error in line 5: NGq S268 28,7
Error in line 12: MDO48lL3fB A914 83,2
